--- a/index.html
+++ b/index.html
@@ -24,23 +24,39 @@
 </head>
 <body>
 
-	<div data-role="page" data-position="fixed" id="home">
-		<div data-role="header">
+	<div data-role="page" data-position="fixed" id="home" data-theme="b">
+		<div data-role="header" data-position="fixed" data-theme="b">
 			<h1>RemindMe</h1>
 		</div>
 		
-		<div data-role="content">
-			<p>This is the main RemindMe home page</p>
+		<div data-role="content" data-theme="b">
+			
 			<p><a href="#reminder" data-role="button" data-icon="arrow-r" data-iconpos="right">Add A Reminder</a></p>
 		</div>
 		
-		<div data-role="footer" data-position="fixed">
-			<h4>footer</h4>
+		<div id="browseButtons">
+			<h3 style=" position: relative; left: 22.5%;">Browse Reminders</h3>
+			<ul data-role="controlgroup" style="margin: 5%" data-inset="true">
+				<a href="index.html" data-role="button">Personal</a>
+				<a href="index.html" data-role="button">Work</a>
+				<a href="index.html" data-role="button">Other</a>
+			</ul>
 		</div>
+		
+		<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#search" id="searchLink" data-ajax="true">Search</a></li>
+						<li><a href="#moreInfo">Info</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 	</div>
 	
-	<div data-role="page" data-position="fixed" id="reminder" data-add-back-btn="true">
-		<div data-role="header">
+	<div data-role="page" data-position="fixed" id="reminder" data-add-back-btn="true" data-theme="b">
+		<div data-role="header" data-position="fixed" data-theme="b">
 			<h1>RemindMe</h1>
 		</div>
 		
@@ -95,48 +111,74 @@
 	        	</ul>
         	</fieldset>
         	<!-- Submit Button -->
-        	<input type="button" value="Submit" id="submit"/>
+        	<span id="buttonHolder" class="ui-btn-text"><input type="button" value="Submit" id="submitButton"/></span>
         </form>
         <br />
         <!-- Clear and Display Data Links -->
         <a href="#" id="clearData">Clear Storage</a>
-        <a href="#" id="showData">Display Data</a>
+        <a href="#search" id="showData">Display Data</a>
         <a href="#reminder" id="addNewForm" style="display:none;">Add New Reminder</a>
         
-        		</div>
+        </div>
 		
-		<div data-role="footer" data-position="fixed" data-id="reminder">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#favorite" data-icon="star">Favorite</a></li>
-					<li><a href="#change" data-icon="gear">Change</a></li>
-					<li><a href="#search" data-icon="search">Search</a></li>
-				</ul>
+		<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#reminder" class="ui-btn-active">+Reminder</a></li>
+						<li><a href="#search" id="searchLink" data-ajax="true">Search</a></li>
+						<li><a href="#moreInfo">Info</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
 	</div>
 	
-	<div data-role="page" data-position="fixed" id="favorite" data-add-back-btn="true">
-		<div data-role="header">
-			<h1>RemindMe</h1>
-		</div>
-		
-		<div data-role="content">
-			<p>Add A Reminder!</p>
-		</div>
-		
-		<div data-role="footer" data-position="fixed" data-id="reminder">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#favorite" data-icon="star" class="ui-btn-active">Favorite</a></li>
-					<li><a href="#change" data-icon="gear">Change</a></li>
-					<li><a href="#search" data-icon="search">Search</a></li>
-				</ul>
+		<div data-role="page" id="search" data-theme="b" data-add-back-btn="true">
+			<div data-role="header" data-position="fixed" data-theme="b" data-id="header">
+				<h1>RemindMe</h1>
+				<a href="#home" data-icon="home" class="ui-btn-right" data-ajax="true">Home</a>
+			</div>
+			<div data-role="content">
+				<div data-role="collapsible-set">
+					<ul data-role="listview" data-inset="true" data-filter="true" id="reminderList">
+						<!-- JavaScript will insert data here -->
+					</ul>
+				</div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#search" class="ui-btn-active" id="searchLink" data-ajax="true">Search</a></li>
+						<li><a href="#moreInfo">Info</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-
-
+		
+		<div data-role="page" id="browse" data-theme="b" data-add-back-btn="true">
+			<div data-role="header" data-position="fixed" data-theme="b" data-id="header">
+				<h1>RemindMe</h1>
+				<a href="#index" data-icon="home" class="ui-btn-right" data-ajax="true">Home</a>
+			</div>
+			<div data-role="content">
+			
+			</div>
+			<div class="content" id="browseReminderList">
+				<!-- JavaScript inserts data here -->
+			</div>
+			<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#search" id="searchLink" data-ajax="true">Search</a></li>
+						<li><a href="#moreInfo">Info</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	
 
 	<!-- JavaScript under here -->
@@ -144,10 +186,9 @@
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
-	<!-- My JS -->
 	<script src="js/json.js" type="text/javascript"></script>
- 	<script type="text/javascript" src="js/main.js"></script>
+
+	
 
 </body>
 </html>
