--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -36,9 +36,9 @@
 		<div id="browseButtons">
 			<h3>Browse Reminders</h3>
 			<ul data-role="controlgroup" style="margin: 5%" data-inset="true">
-				<a href="#browse" data-role="button" id="Personal" data-icon="arrow-r" data-iconpos="right">Personal</a>
-				<a href="#browse" data-role="button" id="Work" data-icon="arrow-r" data-iconpos="right">Work</a>
-				<a href="#browse" data-role="button" id="Other" data-icon="arrow-r" data-iconpos="right">Other</a>
+				<a href="#browse" data-role="button" id="Personal" data-ajax="false" data-icon="arrow-r" data-iconpos="right">Personal</a>
+				<a href="#browse" data-role="button" id="Work" data-ajax="false" data-icon="arrow-r" data-iconpos="right">Work</a>
+				<a href="#browse" data-role="button" id="Other" data-ajax="false" data-icon="arrow-r" data-iconpos="right">Other</a>
 			</ul>
 		</div>
 	</div>
@@ -47,7 +47,7 @@
 				<div data-role="navbar">
 					<ul>
 						<li><a href="#reminder">+Reminder</a></li>
-						<li><a href="#search" id="searchLink" data-ajax="true">Search</a></li>
+						<li><a href="#search" id="searchLink" data-ajax="false">Search</a></li>
 						<li><a href="#info">Info</a>
 						</li>
 					</ul>
@@ -161,7 +161,7 @@
 		<div data-role="page" id="browse" data-theme="b" data-add-back-btn="true">
 			<div data-role="header" data-position="fixed" data-theme="b" data-id="header">
 				<h1>RemindMe</h1>
-				<a href="#index" data-icon="home" class="ui-btn-right" data-ajax="true">Home</a>
+				<a href="#home" id="sendHome" data-icon="home" class="ui-btn-right" data-ajax="true">Home</a>
 			</div>
 			<div data-role="content">
 				<ul data-role="listview" data-inset="true" id="browseReminderList">
@@ -186,7 +186,25 @@
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script src="js/json.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		
+		function $(x) {
+		var theElement = document.getElementById(x);
+		return theElement;
+		}
+	
+		$('sendHome').addEventListener("click", sendBackHome);
+		
+		function sendBackHome(){
+			if ((this.id === "sendHome")) {
+				window.location.href = "index.html";
+			} else {
+			
+			}
+		}
 
+		
+	</script>
 	
 
 </body>
