Added prompts and hints, and split buttons done/reset buttons

--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -56,7 +56,8 @@
 		<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#reminder">+New</a></li>
 						<li><a href="#search" id="searchLink" data-ajax="false">Search</a></li>
 						<li><a href="#moreInfo">Info</a>
 						</li>
@@ -135,7 +136,8 @@
 		<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#reminder" class="ui-btn-active">+Reminder</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#reminder" class="ui-btn-active">+New</a></li>
 						<li><a href="#search" id="searchLink" data-ajax="true">Search</a></li>
 						<li><a href="#moreInfo">Info</a>
 						</li>
@@ -157,7 +159,8 @@
 			<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#reminder">+New</a></li>
 						<li><a href="#search" class="ui-btn-active" id="searchLink" data-ajax="true">Search</a></li>
 						<li><a href="#moreInfo">Info</a>
 						</li>
@@ -179,7 +182,8 @@
 			<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#reminder">+New</a></li>
 						<li><a href="#search" data-ajax="true">Search</a></li>
 						<li><a href="#moreInfo">Info</a></li>
 					</ul>
@@ -201,7 +205,8 @@
 			<div data-role="footer" data-position="fixed" data-theme="b" id="footer">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#reminder">+Reminder</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#reminder">+New</a></li>
 						<li><a href="#search" data-ajax="true">Search</a></li>
 						<li><a href="#moreInfo">Info</a>
 						</li>
